# ParallelSystems

./: .gitignore  CMakeLists.txt
Excercise11/: CMakeLists.txt  build.sh  randdp.c  randdp.h  real.c  type.h  wtime.c
Exercise1/: CMakeLists.txt  CMakeSettings.json  Exercise1.psess  collect_benchmark_data.sh  gprof-250-O0.txt  gprof-250-O3.txt  main.cpp  mmul.cpp  mmul.h  mmul_optimized_1.h  mmul_optimized_2.h  mmul_optimized_4.h  mmul_parallelized.h
Exercise1/bench/: CMakeLists.txt  cmp_optimization_1_2.lastrun.txt  cmp_optimized_1_2.lastrun.txt  cmp_optimized_1_3.lastrun.txt  cmp_optimized_1_4.lastrun.txt  cmp_optimized_2_3.lastrun.txt  cmp_optimized_2_4.lastrun.txt  cmp_optimized_2_parallelized.lastrun.txt  cmp_optimized_3_4.lastrun.txt  cmp_optimized_3_parallelized.lastrun.txt  cmp_optimized_4_parallelized.lastrun.txt  cmp_original_optimization_1.lastrun.txt  cmp_original_optimization_1.txt  cmp_original_optimization_2.lastrun.txt  cmp_original_optimized_1.lastrun.txt  cmp_original_optimized_2.lastrun.txt  cmp_original_optimized_3.lastrun.txt  cmp_original_optimized_4.lastrun.txt  cmp_original_parallelized.lastrun.txt  custom_benchmark.h  example.cpp  example.cpp.bak  mmul_optimized_1.cpp  mmul_optimized_1.lastrun.json  mmul_optimized_2.cpp  mmul_optimized_2.lastrun.json  mmul_optimized_3.cpp  mmul_optimized_3.lastrun.json  mmul_optimized_4.cpp  mmul_optimized_4.lastrun.json  mmul_original.cpp  mmul_original.lastrun.json  mmul_parallelized.cpp  mmul_parallelized.lastrun.json
Exercise1/test/: CMakeLists.txt  mmul_optimized_1.cpp  mmul_optimized_2.cpp  mmul_original.cpp  mmul_parallelized.cpp
Exercise10/mmul/: CMakeLists.txt  matrix.h  matrix_factory.h  mmul.cpp  mmul.h  naive_par.h  naive_seq.h  run.sh  summa_dist.h  summa_dist_2.h  summa_seq.h
Exercise10/mmul/test/: CMakeLists.txt  summa_seq.cpp  test_summa_dist_128.cpp  test_summa_dist_256.cpp  test_summa_dist_32.cpp  test_summa_dist_512.cpp  test_summa_dist_64.cpp  test_summa_seq.cpp
Exercise11/: CMakeLists.txt  build.sh  gettimeofday.h  gprof_O3_cluster.data  gprof_O3_laptop.data  gprof_noOpt_cluster.data  gprof_noOpt_laptop.data  perf.sh  perf_O3_cluster.data  perf_O3_cluster_2slots.data  perf_O3_cluster_4slots.data  perf_O3_cluster_8slots.data  perf_O3_laptop.data  perf_O3_laptop_parallel.data  perf_O3_pc.data  perf_O3_pc_parallel.data  perf_noOpt_cluster.data  perf_noOpt_laptop.data  perf_noOpt_pc.data  randdp.c  real.c  run.sh  wtime.c
Exercise2/: CMakeLists.txt  CMakeSettings.json  collect_benchmark_data.sh  main.cpp  mmul.h
Exercise2/bench/: CMakeLists.txt  contiguous_with_indirection.cpp  contiguous_with_multiplication.cpp  custom_benchmark.h  nested_vector.cpp  perf_bench_vectors.data  triangle_matrix.cpp  triangle_matrix_parallel.cpp
Exercise2/bench/lastrun/: cmp_indirection_triangle_matrix.txt  cmp_indirection_triangle_matrix_parallel.txt  cmp_multiplication_indirection.txt  cmp_multiplication_triangle_matrix.txt  cmp_multiplication_triangle_matrix_parallel.txt  cmp_nested_vector_contiguous_with_indirection.txt  cmp_nested_vector_contiguous_with_multiplication.txt  cmp_nested_vector_triangle_matrix.txt  cmp_nested_vector_triangle_matrix_parallel.txt  contiguous_with_indirection.json  contiguous_with_multiplication.json  nested_vector.json  triangle_matrix.json  triangle_matrix_parallel.json
Exercise2/part1/: README.md
Exercise2/part1/benchmark/: contiguous_with_indirection_benchmark.data  contiguous_with_multiplication_benchmark.data  nested_vector_benchmark.data
Exercise2/part1/perf-results/: contiguous_with_indirection.perf  contiguous_with_multiplication.perf  nested_vector.perf  perf_bench_indirection.data  perf_bench_multiplication.data
Exercise2/part2/: chrono_timer.h  mmul.cpp
Exercise2/test/: contiguous_with_indirection.cpp  contiguous_with_multiplication.cpp  nested_vector.cpp
Exercise4/: CMakeLists.txt  README.md  build.sh  chrono_timer.h  merge_sort.h  run.sh
Exercise4/bench/: collect_benchmark_data.sh  custom_benchmark.h  merge_sort.cpp  merge_sort_benchmark.h  merge_sort_par.cpp  merge_sort_paralell.cpp  merge_sort_seq.cpp  pi_benchmark.h  pi_par.cpp  pi_par_2.cpp  pi_seq.cpp  pi_seq_2.cpp  pi_seq_3.cpp  pi_seq_optimized.cpp  std_sort.cpp  std_stable_sort.cpp
Exercise4/bench/lastrun/: merge_sort.json  merge_sort_par.json  merge_sort_seq.json  pi_par.json  pi_seq.json  pi_seq_optimized.json
Exercise4/cmake/: DownloadProject.cmake
Exercise4/src/: my_vs_original.cpp  nQueens.cpp
Exercise4/src/pi/: main.cpp  pi.h  pi_par.cpp  pi_par_2.cpp
Exercise4/test/: merge_sort_test.cpp  merge_sort_test_par.cpp  merge_sort_test_seq.cpp  monteCarlo2.cpp  monteCarlo2Parallel.cpp  my_vs_original.cpp  nQueens.cpp  nQueensFast.c  nQueens_Parallel.cpp  pi_par.cpp  pi_par_2.cpp  pi_seq.cpp  pi_seq_2.cpp  pi_seq_3.cpp  pi_seq_optimized.cpp  t_pi_par.cpp  t_pi_par_2.cpp  t_pi_seq.cpp  time_ms.h
Exercise6/: CMakeLists.txt  avl.h  avl_par.cpp  avl_par_stable.cpp  avl_seq.cpp  run.sh
Exercise6/bench/: bench_avl.h  bench_avl_par_stable.cpp  bench_avl_seq.cpp
Exercise6/results/: 10_mio_inserts.data  parallel_implementations
Exercise6/test/: avl_test.cpp  avl_test_par.cpp  avl_test_par_stable.cpp  test_avl_par.cpp  test_avl_par_stable.cpp  test_avl_seq.cpp
Exercise7/: 1d.h  2d.h  3d.h  CMakeLists.txt  baseDef.h  bench.md  chrono_timer.h  compare.sh  grid.h  grid_helper.h  iteration.h  jacobi.h  main.cpp  print.h  run.sh  run_comparison.sh  stencil.h  stencil_code.cpp  stencil_test.cpp  time_ms.h
Exercise7/bench/: jacobi_iteration.h  jacobi_iteration_1_threads.cpp  jacobi_iteration_2_threads.cpp  jacobi_iteration_4_threads.cpp  jacobi_iteration_8_threads.cpp  jacobi_iteration_benchmark.h
Exercise7/test/: test_jacobi_1d.cpp  test_jacobi_2d.cpp  test_jacobi_3d.cpp
Exercise8/: 1d.h  3d.h  CMakeLists.txt  CMakeSettings.json  baseDef.h  grid.h  main.cpp  main_old.cpp  mpi_stencil.h  run.sh  stencil.cpp
Exercise8/pi/: pi.h  pi_mpi.cpp  pi_mpi.h  pi_par.cpp  pi_par_2.cpp  pi_seq.cpp
Exercise8/stencil_old/: grid.h  requirements.h
Exercise8/test/: CMakeLists.txt  t_pi_mpi.cpp
(+85 files in other folders)
